[package]
name = "Fido"
version = "0.1.0"
authors = ["codenoid <14269809+codenoid@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
clap = "2.33.0"
nix = "0.15.0"
colored = "1.9"
mongodb = "0.9.1"
bson = "0.14.0"
mime-db = "0.1.4"